[package]
name = "ccdb-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ccdb_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = "0.27.2"
rusqlite = "0.37.0"
thiserror = "2.0.17"
jiff = "0.2.16"
dashmap = "6.1.0"
parking_lot = "0.12.5"
itertools = "0.14.0"
