[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
edition = "2021"
homepage = "TODO"
license = "MIT OR Apache-2.0"
repository = "TODO"
rust-version = "1.88.0"

[workspace.dependencies]
criterion = "0.8.0"
dashmap = "6.1.0"
itertools = "0.14.0"
jiff = "0.2.16"
parking_lot = "0.12.5"
pyo3 = "0.27.2"
rusqlite = "0.37.0"
thiserror = "2.0.17"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "off"
