[package]
name = "gluex-ccdb"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "gluex_ccdb"
crate-type = ["rlib"]

[dependencies]
chrono.workspace = true
dashmap.workspace = true
itertools.workspace = true
memchr.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

gluex-core.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fetch_test_table"
harness = false

[[bench]]
name = "parse_vault"
harness = false

[lints]
workspace = true
