[package]
name = "gluex-lumi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "gluex_lumi"
crate-type = ["rlib"]

[dependencies]
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true

gluex-core.workspace = true
gluex-rcdb.workspace = true
gluex-ccdb.workspace = true

[dev-dependencies]
criterion.workspace = true
