[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "gluex-rcdb"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
per-file-ignores = { "python/tests/test_all.py" = ["S101", "PLR2004", "PT018"] }
