[package]
name = "gluex-rcdb"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "gluex_rcdb"
crate-type = ["rlib"]

[dependencies]
chrono.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

gluex-core.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "rcdb_fetch"
harness = false

[lints]
workspace = true
